Add WhatsApp phone number input to checkout form
Added a phone number input for WhatsApp notifications in the checkout form.

--- a/index.html
+++ b/index.html
@@ -234,6 +234,16 @@
        aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
     </div>
   </footer>
+  <!-- Botón Flotante de Soporte WhatsApp -->
+  <a href="https://wa.me/59177199978?text=Hola%2C%20necesito%20soporte%20con%20mi%20recarga%20🎮" 
+     target="_blank" 
+     rel="noopener noreferrer" 
+     class="btn-soporte-flotante"
+     aria-label="Soporte por WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+    <span class="btn-soporte-texto">Soporte</span>
+  </a>
+
 
   <!-- JS externo -->
   <script src="script.js"></script>
@@ -241,4 +251,5 @@
 
 
 </html>
+
 
